Added Routing with middleware support

--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,14 @@
             "email": "info@magomedcoder.ru"
         }
     ],
+    "require": {
+        "php": "^8.0",
+        "psr/http-message": "^1.0",
+        "pcore/utils": "dev-dev"
+    },
     "autoload": {
         "psr-4": {
             "PCore\\Routing\\": "src/"
         }
-    },
-    "require": {
-        "php": "^8.0"
     }
 }
