--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": "^8.0",
         "psr/http-message": "^1.0",
-        "pcore/utils": "dev-dev"
+        "pcore/utils": "v1.0.0"
     },
     "autoload": {
         "psr-4": {
