--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
     ],
     "require": {
         "php": "^8.0",
-        "psr/http-message": "^1.0",
-        "pcore/utils": "v1.0.0"
+        "pcore/http-message": "*"
     },
     "autoload": {
         "psr-4": {
