--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,15 @@
 {
     "name": "pcore/routing",
+    "description": "The routing component for PCore",
     "type": "library",
     "license": "MIT",
+    "keywords": [
+        "php",
+        "pcore",
+        "pcore-framework",
+        "framework",
+        "pcore-component"
+    ],
     "homepage": "https://github.com/pcore-framework/routing",
     "authors": [
         {
